# Agent-security-planform

./: .gitignore  AgentShield_OS_宣传文章.docx  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  article.md  docker-compose.yml  introduction.txt  md2word.py  push.sh  push2.sh  pyproject.toml  requirements.txt  upgrade.sh
.github/workflows/: ci-cd.yml
agentshield/: __init__.py
agentshield/adapters/: __init__.py  framework_adapter.py
agentshield/audit/: __init__.py  audit_logger.py
agentshield/cli/: __init__.py  main.py
agentshield/core/: __init__.py  security_layer.py
agentshield/datagateway/: __init__.py  data_gateway.py
agentshield/enterprise/: __init__.py  admin.py  auth.py  rbac.py
agentshield/firewall/: __init__.py  llm_data_firewall.py  test_firewall.py
agentshield/integration/: __init__.py  alert_notifier.py  openai_shield.py
agentshield/integrations/: __init__.py
agentshield/ml/: __init__.py  anomaly_detector.py  behavior_analyzer.py  features.py  ml_monitor.py  risk_scorer.py
agentshield/monitoring/: __init__.py  dashboard.py
agentshield/plugins/: __init__.py  base.py  event_bus.py  (+2 more)
docs/: api-reference.md  deployment.md  index.html  quickstart.md  security-config.md
examples/: basic_usage.py  enterprise_auth.py  enterprise_demo.py  k8s_deployment.py  prometheus_metrics.py  sdk_usage.py  security_config.py
k8s/: configmap.yaml  deployment.yaml
tests/: __init__.py  test_agentshield.py  test_cloud_mocks.py  test_integration_auth.py  test_integration_tool.py  test_integration_workflow.py  test_ml_models.py  test_security_modules.py
(+77 files in other folders)
