[tool.poetry]
name = "agentshield"
version = "0.3.0"
description = "AgentShield OS - Enterprise-grade AI Agent Security Runtime"
authors = ["AgentShield Team <18335057001@163.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "agentshield"}]
repository = "https://github.com/ZDY466/AgentShield"
keywords = ["ai", "security", "agent", "llm", "firewall", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = ">=3.9"
pyyaml = "^6.0"
regex = "^2023.0"
python-dateutil = "^2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "black", "flake8", "mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
